--- a/blocks/Cargo.toml
+++ b/blocks/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+ring = "0.17.0-alpha.4"
+block_cryptography = { path="../block_cryptography" }
